# unified_train_pipeline

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
.claude/skills/deep-codebase-wiki/: SKILL.md
configs/: cifar_resnet18.yaml  cifar_wideresnet.yaml  coco128_fasterrcnn.yaml  coco128_retinanet.yaml  default_train.yaml  mnist_conv.yaml  mnist_mlp.yaml
configs/smoke/: cifar_resnet18.yaml  cifar_wideresnet.yaml  coco128_fasterrcnn.yaml  coco128_retinanet.yaml  mnist_conv.yaml  mnist_mlp.yaml
core/: __init__.py  base_loss_module.py  base_module.py  dict_config.py  unified_model.py
docs/wiki/: README.md  metadata.yaml  overview.md
docs/wiki/components/: dict-config.md  evaluator-and-visualizer.md  trainer.md  unified-model.md
docs/wiki/systems/: registry-and-plugin-loading.md  task-implementations.md  training-orchestration.md
docs/wiki/traces/: distributed-training-flow.md  single-process-training-flow.md
hooks/: __init__.py  builtin_hooks.py  hook_runner.py  protocols.py
interfaces/: __init__.py  checkpoint_io.py  evaluator.py  predict_formatter.py  visualizer.py
registry/: __init__.py  dataset_register.py  evaluator_register.py  module_register.py  visualizer_register.py
scripts/: smoke_test.py  train.py
tasks/: __init__.py
tasks/cifar10/: __init__.py  datasets.py  models.py
tasks/coco128/: __init__.py  datasets.py  models.py
tasks/mnist/: __init__.py  datasets.py  evaluators.py  models.py  visualizers.py
train/: __init__.py  distributed.py  loop.py  tensorboard_utils.py  trainer.py  validation_report.py
(+22 files in other folders)
